Prevent text wrapping on button

--- a/packages/block-library/button/style.scss
+++ b/packages/block-library/button/style.scss
@@ -10,6 +10,7 @@
 	word-break: normal;
 	box-sizing: border-box;
 	border-color: currentcolor;
+	white-space: nowrap;
 
 	@include focus-styles;
 
